--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -9,16 +9,16 @@ class="player-position"></app-player>
 
         <!-- cards stack -->
         <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i*7}"
-            src="/assets/img/cards/card_back_alt_large.png" alt="">
-        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="/assets/img/cards/card_back_alt_large.png"
+            src="assets/img/cards/card_back_alt_large.png" alt="">
+        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="assets/img/cards/card_back_alt_large.png"
             alt="">
 
             <!-- stack for played cards -->
-        <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}" alt="">
+        <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}" alt="">
 
         <!-- current card (animation) -->
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-            src="/assets/img/cards/{{ currentCard }}" alt="">
+            src="assets/img/cards/{{ currentCard }}" alt="">
 
     </div>
 </div>
