--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     max-width: 100%;
-    background-image: url(/assets/img/board.png);
+    background-image: url("../../assets/img/board.png");
 
     display: flex;
     justify-content: center;
