--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -2,7 +2,9 @@
     <img src="assets/img/startbox.png" alt="">
 
     <div class="start-label-box">
-        <img (click)="newGame(0)" src="assets/img/startlabel.png" alt="">
+        <img (click)="newGame()" src="assets/img/startlabel.png" alt="">
     </div>
+
+    <!-- <input [(ngModel)]="gameNumber" type="text"> -->
     
 </div>
