--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -17,13 +17,13 @@ class="player-position"></app-player>
         <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}" alt="">
 
         <!-- current card (animation) -->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-            src="assets/img/cards/{{ currentCard }}" alt="">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 25px;"
+            src="assets/img/cards/{{ game.currentCard }}" alt="">
 
     </div>
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
